// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TechnicalSpecificationLeadBlock tests should render correctly when Multiple classifications provided With more than one feature units 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1kfapdf-MuiGrid-root"
    data-testid="grid"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div
            class="Accordion-noInnerPadding css-1u48ai"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1g8jyxy-MuiPaper-root-MuiAccordion-root"
            >
              <div
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-gutters css-3y7fi4-MuiButtonBase-root-MuiAccordionSummary-root"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  class="MuiAccordionSummary-expandIconWrapper Mui-expanded Accordion-summaryExpanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                  >
                    <div
                      class="MuiAccordion-region"
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details css-glpxpj-MuiAccordionDetails-root"
                      >
                        <div
                          class="css-46e850"
                        >
                          <table
                            class="MuiTable-root Table-evenColor Table-noBorder css-wsrw3a-MuiTable-root"
                            data-testid="table"
                          >
                            <tbody
                              class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                                >
                                  200
                                </td>
                              </tr>
                              <tr
                                class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1g8jyxy-MuiPaper-root-MuiAccordion-root"
            >
              <div
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-gutters css-3y7fi4-MuiButtonBase-root-MuiAccordionSummary-root"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  class="MuiAccordionSummary-expandIconWrapper Mui-expanded Accordion-summaryExpanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                  >
                    <div
                      class="MuiAccordion-region"
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details css-glpxpj-MuiAccordionDetails-root"
                      >
                        <div
                          class="css-46e850"
                        >
                          <table
                            class="MuiTable-root Table-evenColor Table-noBorder css-wsrw3a-MuiTable-root"
                            data-testid="table"
                          >
                            <tbody
                              class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                                >
                                  200
                                </td>
                              </tr>
                              <tr
                                class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </p>
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when Multiple classifications provided With no feature units 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1kfapdf-MuiGrid-root"
    data-testid="grid"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div
            class="Accordion-noInnerPadding css-1u48ai"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1g8jyxy-MuiPaper-root-MuiAccordion-root"
            >
              <div
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-gutters css-3y7fi4-MuiButtonBase-root-MuiAccordionSummary-root"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  class="MuiAccordionSummary-expandIconWrapper Mui-expanded Accordion-summaryExpanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                  >
                    <div
                      class="MuiAccordion-region"
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details css-glpxpj-MuiAccordionDetails-root"
                      >
                        <div
                          class="css-46e850"
                        >
                          <table
                            class="MuiTable-root Table-evenColor Table-noBorder css-wsrw3a-MuiTable-root"
                            data-testid="table"
                          >
                            <tbody
                              class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1g8jyxy-MuiPaper-root-MuiAccordion-root"
            >
              <div
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-gutters css-3y7fi4-MuiButtonBase-root-MuiAccordionSummary-root"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  class="MuiAccordionSummary-expandIconWrapper Mui-expanded Accordion-summaryExpanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                  >
                    <div
                      class="MuiAccordion-region"
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details css-glpxpj-MuiAccordionDetails-root"
                      >
                        <div
                          class="css-46e850"
                        >
                          <table
                            class="MuiTable-root Table-evenColor Table-noBorder css-wsrw3a-MuiTable-root"
                            data-testid="table"
                          >
                            <tbody
                              class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </p>
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when One classifications provided With a feature units 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1kfapdf-MuiGrid-root"
    data-testid="grid"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div
            class="css-46e850"
          >
            <table
              class="MuiTable-root Table-evenColor css-wsrw3a-MuiTable-root"
              data-testid="table"
            >
              <thead
                class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
                data-testid="table-head"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                    scope="col"
                  >
                    systemAttributes
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                  >
                    feature1
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                  >
                    200
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </p>
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when One classifications provided With no feature units 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1kfapdf-MuiGrid-root"
    data-testid="grid"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div
            class="css-46e850"
          >
            <table
              class="MuiTable-root Table-evenColor css-wsrw3a-MuiTable-root"
              data-testid="table"
            >
              <thead
                class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
                data-testid="table-head"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head css-47w8l6-MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                    scope="col"
                  >
                    systemAttributes
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1tbee56-MuiTableCell-root"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                  >
                    feature1
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                  >
                    200
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </p>
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when no classifications provided With tech spec an empty set 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1kfapdf-MuiGrid-root"
    data-testid="grid"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      />
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when specification provided With no specification 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1kfapdf-MuiGrid-root"
    data-testid="grid"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div
            class="Accordion-noInnerPadding css-1u48ai"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1g8jyxy-MuiPaper-root-MuiAccordion-root"
            >
              <div
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-gutters css-3y7fi4-MuiButtonBase-root-MuiAccordionSummary-root"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  class="MuiAccordionSummary-expandIconWrapper Mui-expanded Accordion-summaryExpanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                  >
                    <div
                      class="MuiAccordion-region"
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details css-glpxpj-MuiAccordionDetails-root"
                      >
                        <div
                          class="css-46e850"
                        >
                          <table
                            class="MuiTable-root Table-evenColor Table-noBorder css-wsrw3a-MuiTable-root"
                            data-testid="table"
                          >
                            <tbody
                              class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1g8jyxy-MuiPaper-root-MuiAccordion-root"
            >
              <div
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-gutters css-3y7fi4-MuiButtonBase-root-MuiAccordionSummary-root"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  class="MuiAccordionSummary-expandIconWrapper Mui-expanded Accordion-summaryExpanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                  >
                    <div
                      class="MuiAccordion-region"
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details css-glpxpj-MuiAccordionDetails-root"
                      >
                        <div
                          class="css-46e850"
                        >
                          <table
                            class="MuiTable-root Table-evenColor Table-noBorder css-wsrw3a-MuiTable-root"
                            data-testid="table"
                          >
                            <tbody
                              class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </p>
    </div>
  </div>
</div>
`;

exports[`TechnicalSpecificationLeadBlock tests should render correctly when specification provided With specification 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1kfapdf-MuiGrid-root"
    data-testid="grid"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
      data-testid="grid-item"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
        data-testid="typography"
      >
        <div
          class="SystemDetailsTechnicalSpec"
        >
          <div
            class="Accordion-noInnerPadding css-1u48ai"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1g8jyxy-MuiPaper-root-MuiAccordion-root"
            >
              <div
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-gutters css-3y7fi4-MuiButtonBase-root-MuiAccordionSummary-root"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  class="MuiAccordionSummary-expandIconWrapper Mui-expanded Accordion-summaryExpanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                  >
                    <div
                      class="MuiAccordion-region"
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details css-glpxpj-MuiAccordionDetails-root"
                      >
                        <div
                          class="css-46e850"
                        >
                          <table
                            class="MuiTable-root Table-evenColor Table-noBorder css-wsrw3a-MuiTable-root"
                            data-testid="table"
                          >
                            <tbody
                              class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters css-1g8jyxy-MuiPaper-root-MuiAccordion-root"
            >
              <div
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root Accordion-summaryRoot Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-gutters css-3y7fi4-MuiButtonBase-root-MuiAccordionSummary-root"
                data-gtm="{\\"id\\":\\"selector-accordion1\\",\\"label\\":\\"systemAttributes\\",\\"action\\":\\"Selector – Accordion\\"}"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content Accordion-summaryContent Mui-expanded Accordion-summaryExpanded MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6  css-1le86ss-MuiTypography-root"
                    data-testid="typography"
                  >
                    systemAttributes
                  </h6>
                </div>
                <div
                  class="MuiAccordionSummary-expandIconWrapper Mui-expanded Accordion-summaryExpanded css-yw020d-MuiAccordionSummary-expandIconWrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                  >
                    <div
                      class="MuiAccordion-region"
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root accordion-details css-glpxpj-MuiAccordionDetails-root"
                      >
                        <div
                          class="css-46e850"
                        >
                          <table
                            class="MuiTable-root Table-evenColor Table-noBorder css-wsrw3a-MuiTable-root"
                            data-testid="table"
                          >
                            <tbody
                              class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                            >
                              <tr
                                class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
                              >
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
                                >
                                  feature1
                                </td>
                                <td
                                  class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
                                >
                                  200
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4 Grid-item css-5ynyu1-MuiGrid-root"
      data-testid="specificationNotes"
    >
      <div
        class="ColorPair-pearl css-1pt14k0"
      >
        <div
          class="css-qtgtj9"
        >
          <div
            class="css-wepxue"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 Typography-underline css-1ekntu4-MuiTypography-root"
              data-testid="typography"
            >
              specification notes title
            </h4>
            <div
              class="css-1xaekgw"
            >
              <div
                class="RichText-root css-qiddyp"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h3 RichText-title css-d7brak-MuiTypography-root"
                  data-testid="typography"
                >
                  test rich text
                </h3>
              </div>
            </div>
            <div
              class="css-1xaekgw"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"specification notes title - ImALink\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                ImALink
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
